lib/ffi/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Flutter plugin for the un4seen BASS audio library
class FlutterBASS {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterBASS(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterBASS.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int BASS_SetConfig(
    int option,
    int value,
  ) {
    return _BASS_SetConfig(
      option,
      value,
    );
  }

  late final _BASS_SetConfigPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, DWORD)>>(
          'BASS_SetConfig');
  late final _BASS_SetConfig =
      _BASS_SetConfigPtr.asFunction<int Function(int, int)>();

  int BASS_GetConfig(
    int option,
  ) {
    return _BASS_GetConfig(
      option,
    );
  }

  late final _BASS_GetConfigPtr =
      _lookup<ffi.NativeFunction<DWORD Function(DWORD)>>('BASS_GetConfig');
  late final _BASS_GetConfig =
      _BASS_GetConfigPtr.asFunction<int Function(int)>();

  int BASS_SetConfigPtr(
    int option,
    ffi.Pointer<ffi.Void> value,
  ) {
    return _BASS_SetConfigPtr1(
      option,
      value,
    );
  }

  late final _BASS_SetConfigPtrPtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD, ffi.Pointer<ffi.Void>)>>(
          'BASS_SetConfigPtr');
  late final _BASS_SetConfigPtr1 = _BASS_SetConfigPtrPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BASS_GetConfigPtr(
    int option,
  ) {
    return _BASS_GetConfigPtr1(
      option,
    );
  }

  late final _BASS_GetConfigPtrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(DWORD)>>(
          'BASS_GetConfigPtr');
  late final _BASS_GetConfigPtr1 =
      _BASS_GetConfigPtrPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  int BASS_GetVersion() {
    return _BASS_GetVersion();
  }

  late final _BASS_GetVersionPtr =
      _lookup<ffi.NativeFunction<DWORD Function()>>('BASS_GetVersion');
  late final _BASS_GetVersion =
      _BASS_GetVersionPtr.asFunction<int Function()>();

  int BASS_ErrorGetCode() {
    return _BASS_ErrorGetCode();
  }

  late final _BASS_ErrorGetCodePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('BASS_ErrorGetCode');
  late final _BASS_ErrorGetCode =
      _BASS_ErrorGetCodePtr.asFunction<int Function()>();

  int BASS_GetDeviceInfo(
    int device,
    ffi.Pointer<BASS_DEVICEINFO> info,
  ) {
    return _BASS_GetDeviceInfo(
      device,
      info,
    );
  }

  late final _BASS_GetDeviceInfoPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              DWORD, ffi.Pointer<BASS_DEVICEINFO>)>>('BASS_GetDeviceInfo');
  late final _BASS_GetDeviceInfo = _BASS_GetDeviceInfoPtr.asFunction<
      int Function(int, ffi.Pointer<BASS_DEVICEINFO>)>();

  int BASS_Init(
    int device,
    int freq,
    int flags,
    ffi.Pointer<ffi.Void> win,
    ffi.Pointer<ffi.Void> dsguid,
  ) {
    return _BASS_Init(
      device,
      freq,
      flags,
      win,
      dsguid,
    );
  }

  late final _BASS_InitPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(ffi.Int32, DWORD, DWORD, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>>('_BASS_Init');
  late final _BASS_Init = _BASS_InitPtr.asFunction<
      int Function(
          int, int, int, ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int BASS_Free() {
    return _BASS_Free();
  }

  late final _BASS_FreePtr =
      _lookup<ffi.NativeFunction<BOOL Function()>>('BASS_Free');
  late final _BASS_Free = _BASS_FreePtr.asFunction<int Function()>();

  int BASS_SetDevice(
    int device,
  ) {
    return _BASS_SetDevice(
      device,
    );
  }

  late final _BASS_SetDevicePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_SetDevice');
  late final _BASS_SetDevice =
      _BASS_SetDevicePtr.asFunction<int Function(int)>();

  int BASS_GetDevice() {
    return _BASS_GetDevice();
  }

  late final _BASS_GetDevicePtr =
      _lookup<ffi.NativeFunction<DWORD Function()>>('BASS_GetDevice');
  late final _BASS_GetDevice = _BASS_GetDevicePtr.asFunction<int Function()>();

  int BASS_GetInfo(
    ffi.Pointer<BASS_INFO> info,
  ) {
    return _BASS_GetInfo(
      info,
    );
  }

  late final _BASS_GetInfoPtr =
      _lookup<ffi.NativeFunction<BOOL Function(ffi.Pointer<BASS_INFO>)>>(
          'BASS_GetInfo');
  late final _BASS_GetInfo =
      _BASS_GetInfoPtr.asFunction<int Function(ffi.Pointer<BASS_INFO>)>();

  int BASS_Start() {
    return _BASS_Start();
  }

  late final _BASS_StartPtr =
      _lookup<ffi.NativeFunction<BOOL Function()>>('BASS_Start');
  late final _BASS_Start = _BASS_StartPtr.asFunction<int Function()>();

  int BASS_Stop() {
    return _BASS_Stop();
  }

  late final _BASS_StopPtr =
      _lookup<ffi.NativeFunction<BOOL Function()>>('BASS_Stop');
  late final _BASS_Stop = _BASS_StopPtr.asFunction<int Function()>();

  int BASS_Pause() {
    return _BASS_Pause();
  }

  late final _BASS_PausePtr =
      _lookup<ffi.NativeFunction<BOOL Function()>>('BASS_Pause');
  late final _BASS_Pause = _BASS_PausePtr.asFunction<int Function()>();

  int BASS_IsStarted() {
    return _BASS_IsStarted();
  }

  late final _BASS_IsStartedPtr =
      _lookup<ffi.NativeFunction<DWORD Function()>>('BASS_IsStarted');
  late final _BASS_IsStarted = _BASS_IsStartedPtr.asFunction<int Function()>();

  int BASS_Update(
    int length,
  ) {
    return _BASS_Update(
      length,
    );
  }

  late final _BASS_UpdatePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_Update');
  late final _BASS_Update = _BASS_UpdatePtr.asFunction<int Function(int)>();

  double BASS_GetCPU() {
    return _BASS_GetCPU();
  }

  late final _BASS_GetCPUPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('BASS_GetCPU');
  late final _BASS_GetCPU = _BASS_GetCPUPtr.asFunction<double Function()>();

  int BASS_SetVolume(
    double volume,
  ) {
    return _BASS_SetVolume(
      volume,
    );
  }

  late final _BASS_SetVolumePtr =
      _lookup<ffi.NativeFunction<BOOL Function(ffi.Float)>>('BASS_SetVolume');
  late final _BASS_SetVolume =
      _BASS_SetVolumePtr.asFunction<int Function(double)>();

  double BASS_GetVolume() {
    return _BASS_GetVolume();
  }

  late final _BASS_GetVolumePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>('BASS_GetVolume');
  late final _BASS_GetVolume =
      _BASS_GetVolumePtr.asFunction<double Function()>();

  int BASS_Set3DFactors(
    double distf,
    double rollf,
    double doppf,
  ) {
    return _BASS_Set3DFactors(
      distf,
      rollf,
      doppf,
    );
  }

  late final _BASS_Set3DFactorsPtr = _lookup<
          ffi.NativeFunction<BOOL Function(ffi.Float, ffi.Float, ffi.Float)>>(
      'BASS_Set3DFactors');
  late final _BASS_Set3DFactors =
      _BASS_Set3DFactorsPtr.asFunction<int Function(double, double, double)>();

  int BASS_Get3DFactors(
    ffi.Pointer<ffi.Float> distf,
    ffi.Pointer<ffi.Float> rollf,
    ffi.Pointer<ffi.Float> doppf,
  ) {
    return _BASS_Get3DFactors(
      distf,
      rollf,
      doppf,
    );
  }

  late final _BASS_Get3DFactorsPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>)>>('BASS_Get3DFactors');
  late final _BASS_Get3DFactors = _BASS_Get3DFactorsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Float>)>();

  int BASS_Set3DPosition(
    ffi.Pointer<BASS_3DVECTOR> pos,
    ffi.Pointer<BASS_3DVECTOR> vel,
    ffi.Pointer<BASS_3DVECTOR> front,
    ffi.Pointer<BASS_3DVECTOR> top,
  ) {
    return _BASS_Set3DPosition(
      pos,
      vel,
      front,
      top,
    );
  }

  late final _BASS_Set3DPositionPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>)>>('BASS_Set3DPosition');
  late final _BASS_Set3DPosition = _BASS_Set3DPositionPtr.asFunction<
      int Function(ffi.Pointer<BASS_3DVECTOR>, ffi.Pointer<BASS_3DVECTOR>,
          ffi.Pointer<BASS_3DVECTOR>, ffi.Pointer<BASS_3DVECTOR>)>();

  int BASS_Get3DPosition(
    ffi.Pointer<BASS_3DVECTOR> pos,
    ffi.Pointer<BASS_3DVECTOR> vel,
    ffi.Pointer<BASS_3DVECTOR> front,
    ffi.Pointer<BASS_3DVECTOR> top,
  ) {
    return _BASS_Get3DPosition(
      pos,
      vel,
      front,
      top,
    );
  }

  late final _BASS_Get3DPositionPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>,
              ffi.Pointer<BASS_3DVECTOR>)>>('BASS_Get3DPosition');
  late final _BASS_Get3DPosition = _BASS_Get3DPositionPtr.asFunction<
      int Function(ffi.Pointer<BASS_3DVECTOR>, ffi.Pointer<BASS_3DVECTOR>,
          ffi.Pointer<BASS_3DVECTOR>, ffi.Pointer<BASS_3DVECTOR>)>();

  void BASS_Apply3D() {
    return _BASS_Apply3D();
  }

  late final _BASS_Apply3DPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('BASS_Apply3D');
  late final _BASS_Apply3D = _BASS_Apply3DPtr.asFunction<void Function()>();

  int BASS_PluginLoad(
    ffi.Pointer<ffi.Int8> file,
    int flags,
  ) {
    return _BASS_PluginLoad(
      file,
      flags,
    );
  }

  late final _BASS_PluginLoadPtr = _lookup<
          ffi.NativeFunction<HPLUGIN Function(ffi.Pointer<ffi.Int8>, DWORD)>>(
      'BASS_PluginLoad');
  late final _BASS_PluginLoad = _BASS_PluginLoadPtr.asFunction<
      int Function(ffi.Pointer<ffi.Int8>, int)>();

  int BASS_PluginFree(
    int handle,
  ) {
    return _BASS_PluginFree(
      handle,
    );
  }

  late final _BASS_PluginFreePtr =
      _lookup<ffi.NativeFunction<BOOL Function(HPLUGIN)>>('BASS_PluginFree');
  late final _BASS_PluginFree =
      _BASS_PluginFreePtr.asFunction<int Function(int)>();

  int BASS_PluginEnable(
    int handle,
    int enable,
  ) {
    return _BASS_PluginEnable(
      handle,
      enable,
    );
  }

  late final _BASS_PluginEnablePtr =
      _lookup<ffi.NativeFunction<BOOL Function(HPLUGIN, BOOL)>>(
          'BASS_PluginEnable');
  late final _BASS_PluginEnable =
      _BASS_PluginEnablePtr.asFunction<int Function(int, int)>();

  ffi.Pointer<BASS_PLUGININFO> BASS_PluginGetInfo(
    int handle,
  ) {
    return _BASS_PluginGetInfo(
      handle,
    );
  }

  late final _BASS_PluginGetInfoPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<BASS_PLUGININFO> Function(HPLUGIN)>>(
      'BASS_PluginGetInfo');
  late final _BASS_PluginGetInfo = _BASS_PluginGetInfoPtr.asFunction<
      ffi.Pointer<BASS_PLUGININFO> Function(int)>();

  int BASS_SampleLoad(
    int mem,
    ffi.Pointer<ffi.Void> file,
    int offset,
    int length,
    int max,
    int flags,
  ) {
    return _BASS_SampleLoad(
      mem,
      file,
      offset,
      length,
      max,
      flags,
    );
  }

  late final _BASS_SampleLoadPtr = _lookup<
      ffi.NativeFunction<
          HSAMPLE Function(BOOL, ffi.Pointer<ffi.Void>, QWORD, DWORD, DWORD,
              DWORD)>>('BASS_SampleLoad');
  late final _BASS_SampleLoad = _BASS_SampleLoadPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int, int, int, int)>();

  int BASS_SampleCreate(
    int length,
    int freq,
    int chans,
    int max,
    int flags,
  ) {
    return _BASS_SampleCreate(
      length,
      freq,
      chans,
      max,
      flags,
    );
  }
